--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,11 @@ DB_PORT=5432
 TEST_CARD_NUMBER=4242424242424242
 TEST_CARD_EXP=01/28
 TEST_CARD_CVC=123
+
+# SMTP Email Settings
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-app-password
+DEFAULT_FROM_EMAIL=your-email@gmail.com
