--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,9 +7,22 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 CORS_ALLOWED_ORIGINS=http://localhost:3000
 CSRF_TRUSTED_ORIGINS=http://localhost:3000
 
-# JWT lifetimes
-ACCESS_TOKEN_HOURS=12
-REFRESH_TOKEN_DAYS=7
+# JWT Token Lifetimes
+# Access token: can be set in minutes (ACCESS_TOKEN_MINUTES) or hours (ACCESS_TOKEN_HOURS)
+# If ACCESS_TOKEN_MINUTES is set, it takes precedence
+ACCESS_TOKEN_MINUTES=60
+ACCESS_TOKEN_HOURS=1
+# Refresh token: lifetime in days
+REFRESH_TOKEN_DAYS=14
+
+# Celery & Redis
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+# Overdue Task Notification Time (24-hour format)
+# Celery Beat will run flag_overdue_tasks at this time every day
+OVERDUE_NOTIFY_HOUR=21
+OVERDUE_NOTIFY_MINUTE=0
 
 # Database: set DB_ENGINE=postgresql to enable postgres
 DB_ENGINE=sqlite
