--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,7 @@ COPY . .
 
 # Build-time environment variables (passed via --build-arg)
 # NEXT_PUBLIC_API_BASE must be set at build time for Next.js
-# If not provided, will use default (should be set via --build-arg)
+# Usage: docker build --build-arg NEXT_PUBLIC_API_BASE=http://api.example.com -t app .
 ARG NEXT_PUBLIC_API_BASE=http://localhost:8089
 ENV NEXT_PUBLIC_API_BASE=${NEXT_PUBLIC_API_BASE}
 
@@ -28,22 +28,29 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
+# Create non-root user in a single layer
 RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 nextjs
 
-RUN mkdir -p .next
-RUN chown nextjs:nodejs .next
-
 # https://nextjs.org/docs/advanced-features/output-file-tracing
+# Copy standalone output and static files
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 COPY --from=builder --chown=nextjs:nodejs /app/public ./public
 
+# Switch to non-root user
 USER nextjs
 
 EXPOSE 3000
 
-# PORT and HOSTNAME can be set via environment variables at runtime
+# Runtime environment variables
+ENV PORT=3000
+ENV HOSTNAME=0.0.0.0
+ENV NEXT_TELEMETRY_DISABLED=1
+
+# Healthcheck to monitor container health
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:3000', (r) => {process.exit(r.statusCode < 500 ? 0 : 1)})" || exit 1
 
 CMD ["node", "server.js"]
 
