--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -32,6 +32,13 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env.dev
+.env.staging
+.env.prod
+
+!.env.dev.example
+!.env.staging.example
+!.env.prod.example
+
 
 # vercel
 .vercel
