--- a/infra/docker/docker-compose.dev.yml
+++ b/infra/docker/docker-compose.dev.yml
@@ -112,6 +112,18 @@ services:
   nginx:
     image: nginx:1.27-alpine
     container_name: task_manager_nginx_dev
+    command: >
+      sh -c "
+        until nc -z backend 8089; do
+          echo 'Waiting for backend...';
+          sleep 2;
+        done;
+        until nc -z frontend 3000; do
+          echo 'Waiting for frontend...';
+          sleep 2;
+        done;
+        exec nginx -g 'daemon off;'
+      "
     depends_on:
       - backend
       - frontend
