--- a/infra/docker/docker-compose.staging.yml
+++ b/infra/docker/docker-compose.staging.yml
@@ -33,7 +33,7 @@ services:
     build:
       context: ../../backend
     container_name: task_manager_backend_stag
-    command: python manage.py runserver 0.0.0.0:8089
+    command: gunicorn core.wsgi:application --bind 0.0.0.0:8089
     env_file:
       - ../../backend/.env.staging
     environment:
@@ -95,14 +95,12 @@ services:
     image: node:20-alpine
     container_name: task_manager_frontend_stag
     working_dir: /app
-    command: sh -c "npm install && npm run dev -- --hostname 0.0.0.0 --port 3000"
+    command: sh -c "npm install && npm run build && npm run start --hostname 0.0.0.0 --port 3000"
     env_file:
       - ../../frontend/.env.staging
     environment:
-      # این برای ارتباط داخلی بین کانتینرهاست
       API_BASE_INTERNAL: http://backend:8089
       NODE_ENV: staging
-      # NEXT_PUBLIC_API_BASE رو داخل frontend/.env.staging تنظیم کن (مثلاً http://IP-سرور)
     volumes:
       - ../../frontend:/app
       - frontend_node_modules_stag:/app/node_modules
