--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -101,7 +101,10 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
-            proxy_read_timeout 120s;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+
         }
     }
 }
