solve docker problems

--- a/backend/.env.dev.example
+++ b/backend/.env.dev.example
@@ -7,6 +7,9 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 CORS_ALLOWED_ORIGINS=http://localhost:3000
 CSRF_TRUSTED_ORIGINS=http://localhost:3000
 
+DJANGO_ENV=dev
+
+
 # JWT Token Lifetimes
 # Access token: can be set in minutes (ACCESS_TOKEN_MINUTES) or hours (ACCESS_TOKEN_HOURS)
 # If ACCESS_TOKEN_MINUTES is set, it takes precedence
