--- a/backend/.env.prod.example
+++ b/backend/.env.prod.example
@@ -4,6 +4,8 @@
 DJANGO_SECRET_KEY=change-me-prod-secret-super-strong
 DJANGO_DEBUG=False
 DJANGO_ALLOWED_HOSTS=your-domain.com,www.your-domain.com
+DJANGO_ENV=prod
+
 
 # ==========================
 # CORS / CSRF (comma-separated)
@@ -42,7 +44,6 @@ DB_PORT=5432
 # ==========================
 # Billing test card (PROD)
 # ==========================
-# در پروداکشن می‌تونی خالی بذاری یا فقط برای تست sandbox
 TEST_CARD_NUMBER=4242424242424242
 TEST_CARD_EXP=01/28
 TEST_CARD_CVC=123
@@ -67,3 +68,11 @@ DJANGO_TIME_ZONE=Asia/Tehran
 # ==========================
 RECURRING_TASKS_HOUR=0
 RECURRING_TASKS_MINUTE=0
+
+# ===========================
+# AWS S3 Bucker
+# ===========================
+AWS_STORAGE_BUCKET_NAME=task-manager-prod-media
+AWS_S3_REGION_NAME=eu-central-1
+AWS_S3_CUSTOM_DOMAIN=cdn.your-domain.com
+MEDIA_URL=https://cdn.your-domain.com/media/
