--- a/backend/.env.staging.example
+++ b/backend/.env.staging.example
@@ -4,6 +4,8 @@
 DJANGO_SECRET_KEY=change-me-staging-secret
 DJANGO_DEBUG=False
 DJANGO_ALLOWED_HOSTS=staging.your-domain.com
+DJANGO_ENV=staging
+
 
 # ==========================
 # CORS / CSRF (comma-separated)
