--- a/infra/docker/docker-compose.dev.yml
+++ b/infra/docker/docker-compose.dev.yml
@@ -59,6 +59,12 @@ services:
       context: ../../backend
     container_name: task_manager_celery_worker_dev
     command: celery -A core worker --loglevel=info
+    healthcheck:
+      test: ["CMD-SHELL", "celery -A core inspect ping -d celery@$$HOSTNAME | grep -q pong"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
     env_file:
       - ../../backend/.env.dev
     environment:
@@ -79,6 +85,12 @@ services:
       context: ../../backend
     container_name: task_manager_celery_beat_dev
     command: celery -A core beat --loglevel=info
+    healthcheck:
+      test: ["CMD-SHELL", "pgrep -f 'celery beat' >/dev/null"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
     env_file:
       - ../../backend/.env.dev
     environment:
