--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -12,6 +12,8 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    resolver 127.0.0.11 valid=30s ipv6=off;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
@@ -32,11 +34,13 @@ http {
     }
 
     upstream backend_app {
-        server backend:8089;
+        zone backend_app 64k;
+        server backend:8089 resolve;
     }
 
     upstream frontend_app {
-        server frontend:3000;
+        zone frontend_app 64k;
+        server frontend:3000 resolve;
     }
 
     server {
