--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,10 @@
 FROM python:3.12-slim AS builder
 
-ARG BUILDPLATFORM
-ARG TARGETPLATFORM
-
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -19,20 +12,15 @@ COPY requirements.txt .
 
 RUN pip install --user --no-warn-script-location -r requirements.txt
 
-#--------------------------
+# --------------------------
+
 FROM python:3.12-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PATH="/home/django/.local/bin:$PATH" \
     DJANGO_SETTINGS_MODULE=core.settings
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libpq5 \
-    curl \
-    procps \
-    && rm -rf /var/lib/apt/lists/*
-
+    
 RUN useradd -m -u 1000 django && \
     mkdir -p /app/static /app/media && \
     chown -R django:django /app
@@ -40,13 +28,11 @@ RUN useradd -m -u 1000 django && \
 WORKDIR /app
 
 COPY --from=builder --chown=django:django /root/.local /home/django/.local
-
 COPY --chown=django:django . .
 
 USER root
-RUN chmod +x /app/docker-entrypoint.sh
+RUN chmod +x /app/docker-entrypoint.sh && chown django:django /app/docker-entrypoint.sh
 USER django
-
 
 EXPOSE 8089
 
