--- a/infra/docker/docker-compose.dev.yml
+++ b/infra/docker/docker-compose.dev.yml
@@ -30,13 +30,15 @@ services:
       retries: 5
 
   backend:
-    image: task_manager_backend_dev         
+    build:                   
+      context: ../../backend
+    image: task_manager_backend_dev
     container_name: task_manager_backend_dev
     command: python manage.py runserver 0.0.0.0:8089
     env_file:
       - ../../backend/.env.dev
     environment:
-      RUN_MIGRATIONS: "true"                 
+      RUN_MIGRATIONS: "true"
       DJANGO_ALLOWED_HOSTS: backend,localhost,127.0.0.1
       DB_HOST: postgres
       DB_PORT: 5432
@@ -55,13 +57,13 @@ services:
         condition: service_healthy
 
   celery-worker:
-    image: task_manager_backend_dev
+    image: task_manager_backend_dev   
     container_name: task_manager_celery_worker_dev
     command: celery -A core worker --loglevel=info
     env_file:
       - ../../backend/.env.dev
     environment:
-      RUN_MIGRATIONS: "false"          
+      RUN_MIGRATIONS: "false"
       DB_HOST: postgres
       DB_PORT: 5432
       CELERY_BROKER_URL: redis://redis:6379/0
@@ -75,7 +77,7 @@ services:
         condition: service_healthy
 
   celery-beat:
-    image: task_manager_backend_dev
+    image: task_manager_backend_dev   
     container_name: task_manager_celery_beat_dev
     command: celery -A core beat --loglevel=info
     env_file:
