--- a/frontend/.env.dev.example
+++ b/frontend/.env.dev.example
@@ -7,3 +7,5 @@ NEXT_PUBLIC_API_BASE=http://localhost:8089
 NEXT_PUBLIC_TEST_CARD_NUMBER=4242424242424242
 NEXT_PUBLIC_TEST_CARD_EXP=01/28
 NEXT_PUBLIC_TEST_CARD_CVC=123
+
+PLAYWRIGHT_BASE_URL=http://localhost
