--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,37 @@ jobs:
 
     env:
       DJANGO_SECRET_KEY: django-insecure-7exf4-py_o#^w0omrk)(%ct&f#t+se(b%txl+=^yj7lh0@9ho_
-      DJANGO_ENV: dev 
+      DJANGO_DEBUG: True
+      DJANGO_ALLOWED_HOSTS: localhost,127.0.0.1
+      CORS_ALLOWED_ORIGINS: http://localhost:3000
+      CSRF_TRUSTED_ORIGINS: http://localhost:3000
+      DJANGO_ENV: dev
+      MEDIA_URL: /media/
+      ACCESS_TOKEN_MINUTES: 60
+      ACCESS_TOKEN_HOURS: 1
+      REFRESH_TOKEN_DAYS: 14
+      CELERY_BROKER_URL: redis://localhost:6379/0
+      CELERY_RESULT_BACKEND: redis://localhost:6379/0
+      OVERDUE_NOTIFY_HOUR: 21
+      OVERDUE_NOTIFY_MINUTE: 0
+      DB_NAME: task_manager
+      DB_USER: task_manager
+      DB_PASSWORD: Asdfghjkl0
+      DB_HOST: localhost
+      DB_PORT: 5432
+      TEST_CARD_NUMBER: 4242424242424242
+      TEST_CARD_EXP: 01/28
+      TEST_CARD_CVC: 123
+      EMAIL_HOST: smtp.gmail.com
       EMAIL_PORT: 587
+      EMAIL_USE_TLS: True
+      EMAIL_HOST_USER: real.amirhosssein0@gmail.com
+      EMAIL_HOST_PASSWORD: bdvs kopr wgnc rnkp
+      DEFAULT_FROM_EMAIL: real.amirhosssein0@gmail.com
+      DJANGO_TIME_ZONE: Asia/Tehran
+      RECURRING_TASKS_HOUR: 0
+      RECURRING_TASKS_MINUTE: 0
+
 
       
 
